Facebook auth added

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -280,7 +280,8 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input id="signinPassword" type="password" class="form-control loginTestInput" name="password" placeholder="Password">
                     </div>
-                    <input type="button" id="buttonSignIn" value="Sign In" class="btn btn-default"/>
+                    <input type="button" id="buttonSignIn" value="Sign In" class="btn btn-default"/><br>
+                    <a href="/login/facebook"><img src="http://i.stack.imgur.com/ZW4QC.png"></a>
                 </form>
             </div>
     </section>
@@ -289,7 +290,7 @@
     <section id="signUp" class="login mainbackground allData">
         <div class="title col-xs-12"><h1>PRE<span style='color:red'>Z</span>ERA</h1></div>
 
-        <div class="loginbody">
+        <div class="loginbodyWeb">
 				<h1>Create account </h1>
 				<h4 id="signupError" style="color: #FF0000; display:none"></h4>
                 <form role="form" id="signUpForm">
@@ -304,6 +305,7 @@
                         <input id="signUpPassword" type="password" class="form-control" name="password" placeholder="Password">
                     </div>
                     <input id="buttonSignUp" type="button" value="Create Account" class="btn btn-default"/>
+                    <a href="/login/facebook"><img src="http://i.stack.imgur.com/ZW4QC.png"></a>
                 </form>
             </div>
     </section>
