Fixes for index page, added facebook button

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -9,14 +9,11 @@
     <meta name="description" content="Free online web presentations. Social chat, video presentation, personal presentation notes, password protection and much more." />
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
   <meta content="https://www.prezera.com" property="og:url" />
-    <meta content="https://www.prezera.com/img/logo.png" property="og:image" />
-    <link rel="shortcut icon" id="favicon" href="./img/UberGuestlistFavicon.png">
     <meta name="author" content="PREZERA inc.">
     <link rel="canonical" href="https://www.prezera.com" />
 	<meta name="viewport" content="width=device-width, initial-scale=0.9">
 	<!-- Facebook specific tags -->
 	<meta property="og:image" content="img/Prezera_Logo.png" />
-	<meta property="og:title" content="Prezera - main page" />
 	<meta property="og:site_name" content="Prezera - live online presentations"/>
 	<meta property="og:description" content="PREZERA.COM™ enables you to present from inside your browser to a remote and in-house audiences. It comes with an iPhone remote control app. PREZERA.COM™ adds a social component inside your presentation allowing audience to connect with each other and presenter. Desktop sharing and video broadcasting make your presentation efficient. PREZERA.COM™ is the best and the simpliest way in the world to explain information from one person to many." />
 
@@ -281,7 +278,7 @@
                         <input id="signinPassword" type="password" class="form-control loginTestInput" name="password" placeholder="Password">
                     </div>
                     <input type="button" id="buttonSignIn" value="Sign In" class="btn btn-default"/><br>
-                    <a href="/login/facebook"><img src="http://i.stack.imgur.com/ZW4QC.png"></a>
+                    <a href="/login/facebook"><img src="/img/facebook-button.png"></a>
                 </form>
             </div>
     </section>
@@ -296,18 +293,18 @@
                 <form role="form" id="signUpForm">
                 <input type="hidden" id="signUpRedirect" name="redirect" value="<%= request.headers.referer %>">
                 <input type="hidden" id="signUpAccType" name="account" value="">
-                    <div class="form-group">
+                  <div class="form-group" id="loginEmailFormGroup">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input id="signUpEmail" type="email" class="form-control" name="email" placeholder="Enter email">
+                        <input id="signUpEmail" type="email" class="form-control loginTestInput" name="email" placeholder="Enter email">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="loginPasswordFormGroup">
                         <label for="exampleInputPassword1">Password</label>
-                        <input id="signUpPassword" type="password" class="form-control" name="password" placeholder="Password">
+                        <input id="signUpPassword" type="password" class="form-control loginTestInput" name="password" placeholder="Password">
                     </div>
-                    <input id="buttonSignUp" type="button" value="Create Account" class="btn btn-default"/>
-                    <a href="/login/facebook"><img src="http://i.stack.imgur.com/ZW4QC.png"></a>
+                    <input id="buttonSignUp" type="button" value="Create Account" class="btn btn-default"/><br>
+                    <a href="/login/facebook"><img src="/img/facebook-button.png"></a>
                 </form>
-            </div>
+              </div>
     </section>
 
 	<% } %>
