--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -267,7 +267,7 @@
         <div class="loginbodyWeb">
 				<h1>Sign In</h1>
         <% if(request.query['facebook-err'] == 1) { %>
-          <h4 id="facebookError" style="color: #FF0000;">We can not authorize you through the Facebook. Seems like you don't have a valid email in you Facebook profile.</h4>
+          <h4 id="facebookError" style="color: #FF0000;">We can not authorize you through the Facebook. Seems like you don't have a valid email in your Facebook profile.</h4>
         <% } %>
 				<h4 id="loginError" style="color: #FF0000; display:none"></h4>
                 <form role="form" id="signInForm">
@@ -293,7 +293,7 @@
         <div class="loginbodyWeb">
 				<h1>Create account </h1>
         <% if(request.query['facebook-err'] == 1) { %>
-          <h4 id="facebookError" style="color: #FF0000;">We can not authorize you through the Facebook. Seems like you don't have a valid email in you Facebook profile.</h4>
+          <h4 id="facebookError" style="color: #FF0000;">We can not authorize you through the Facebook. Seems like you don't have a valid email in your Facebook profile.</h4>
         <% } %>
 				<h4 id="signupError" style="color: #FF0000; display:none"></h4>
                 <form role="form" id="signUpForm">
