--- a/AWS_Website/www_static/A1/webrtc/screen-client-v2.html
+++ b/AWS_Website/www_static/A1/webrtc/screen-client-v2.html
@@ -35,7 +35,7 @@
         <script>
           var connection = new RTCMultiConnection();
           var hash = "<%= hash %>";
-          connection.socketURL = '/';
+          connection.socketURL = '/signaling-server';
           connection.enableScalableBroadcast = true;
           connection.session = {
             screen: true,
@@ -52,7 +52,6 @@
 
           connection.onstream = function(event) {
             if(event.type == "local") {
-              connection.getSocket().emit("presenterVideoChat", {open: 1, hash: '<%= hash %>'});
               $("#videoL").append(event.mediaElement);
             }
             else {
