fav, img_fcebook, bg, share screen button

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -73,6 +73,7 @@
 					<span style="font-size:2em; vertical-align:top; float:left; padding-right:10px; padding-left:30px;">&lt;</span>
 					<span style="vertical-align:top;float:left;">PREV</span>
 			</div>
+			<div class="UI button button_unpressed" id="copyClipboardButton">Screenshare</div>
 			<div class="UI button button_unpressed" id="laser">POINTER</div>
 			<div class="UI button button_unpressed" id="draw">DRAW</div>
 			<div class="UI button button_unpressed" id="next" style="height:50px; line-height:50px;">
@@ -345,7 +346,7 @@
 		<!-- AddToAny BEGIN -->
 		<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
 		<!--a class="a2a_dd" href="https://www.addtoany.com/share"></a-->
-		<a class="copyButton" title="Copy url to clipboard" alt="dwadwa"><img src="/A1/img/copy-share.png" id="copyClipboardButton"></a>
+		<a class="copyButton" title="Copy url to clipboard" alt="share icon"><img src="/A1/img/copy-share 2.png" id="copyClipboardButton" ></a>
 		<a class="a2a_button_google_gmail"></a>
 		<a class="a2a_button_facebook"></a>
 		<a class="a2a_button_twitter"></a>
