--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -148,7 +148,7 @@
         <div class="simplePage">
           <h3 style='text-align:center; margin-top:3%; font-size:3vw'>How to get a presentation ID & password?</h3>
 		      <ul id="howToGetPresentationId">
-			      <li>Open your presentation in a web browser</li>
+			      <li>Open your presentation in a web browser <a href="/#myPres" id="menuMyPres">(My Presentations)</a></li>
 			      <li>Open main menu and click 'Get presenter password'<br><img src="./img/getkey.png" alt="get key" id="img_get_key";></li>
 			      <li>After that the system will show you your presentation access credentials</li>
 		      </ul>
