--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -133,7 +133,7 @@
         <iframe width="100%" height="100%" id="screensharingiframe" src="" style="margin-left:5%;" scrolling="no"></iframe>
       </div>
 
-      <div id="video-gallery" class="royalSlider videoGallery rsDefault">
+      <div id="video-gallery" class="royalSlider videoGallery rsDefault videogalleryDisplay">
       </div>
     <!--/center-->
 
@@ -145,7 +145,7 @@
 		</p>
 	</div>
 
-	<div id="comments">
+	<div id="comments" class="commentsDisplay">
 			<center><div class='panelTitle' style='position: absolute; left: 7%;'>Live chat</div><center>
 			<div class="closevideo" id="closeChat" style='margin-right: 20px;' title="Close Chat"></div>
 			<iframe id="urlChat" src="/chat.html" style='width:100%;height:100%'></iframe>
@@ -234,7 +234,7 @@
 		<iframe width="100%" height="100%" id="screensharingiframe"  scrolling="no"></iframe>
 	</div> -->
 	<!-- <div id="videochatpanel"></div> -->
-	<div id="videochat">
+	<div id="videochat" class="videochatDisplay">
 		<span class="closeLiveVideo"><div class="closevideo" id="closevideo"></div></span>
 		<iframe width="100%" height="100%" id="videoframe" scrolling="auto" allowfullscreen="true"></iframe>
 	</div>
