--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -272,6 +272,7 @@
           <h4 id="facebookError" style="color: #FF0000;">We can not authorize you through the Facebook. Seems like you don't have a valid email in your Facebook profile.</h4>
         <% } %>
 				<h4 id="loginError" style="color: #FF0000; display:none"></h4>
+                <h4 id="loginSuccess" style="color: green; display:none"></h4>
                 <form role="form" id="signInForm">
                 <input type="hidden" name="redirect" value="<%= request.headers.referer %>">
                     <div class="form-group" id="loginEmailFormGroup">
