--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -147,7 +147,7 @@
 
 	<div id="comments" class="commentsDisplay">
 			<center><div class='panelTitle' style='position: absolute; left: 7%;'>Live chat</div><center>
-			<div class="closevideo" id="closeChat" style='margin-right: 20px;' title="Close Chat"></div>
+			<div class="closecomments" id="closeChat" style='margin-right: 20px;' title="Close Chat"></div>
 			<iframe id="urlChat" src="/chat.html" style='width:100%;height:100%'></iframe>
 			<script>
 			    document.getElementById('urlChat').src = "/chat.html?presentation=" + currentHash.toUpperCase();
